# material-grupo-estudio-c

chapter_1/: README.md
chapter_1/session_1/00/: CMakeLists.txt  Makefile  README.md
chapter_1/session_1/00/src/: main.cpp  utils.cpp
chapter_1/session_1/01/: 00_exercice.c  01_exercice.c  02_exercice.c  03_exercice.c
chapter_1/session_2/: 00_word_counting.c  01_arrays.c  02_functions.c
